--- a/tango2.html
+++ b/tango2.html
@@ -79,6 +79,7 @@ body {
   font-size: 28px;
   padding: 20px;
   box-sizing: border-box;
+  white-space: pre-line;
 }
 
 .back {
@@ -168,3 +169,4 @@ loadSet("eng.csv");
 
 </body>
 </html>
+
