--- a/vocabcards.html
+++ b/vocabcards.html
@@ -95,12 +95,14 @@ body {
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start; 
   font-size: 28px;
   padding: 20px;
   box-sizing: border-box;
   white-space: pre-line;
+  overflow-y: auto;      
 }
+
 
 .back {
   transform: rotateY(180deg);
