--- a/vocabcards.html
+++ b/vocabcards.html
@@ -135,10 +135,10 @@ button {
   </div>
 
   <div class="menu-group">
-    <div class="menu-parent" onclick="toggleMenu(this)">▸古文</div>
+    <div class="menu-parent" onclick="toggleMenu(this)">▸古典</div>
     <div class="menu-children">
-      <div class="menu-item" onclick="loadSet(3)">単語</div>
-      <div class="menu-item" onclick="loadSet(4)">文法</div>
+      <div class="menu-item" onclick="loadSet(3)">古文</div>
+      <div class="menu-item" onclick="loadSet(4)">漢文</div>
     </div>
   </div>
 
@@ -173,10 +173,10 @@ button {
 
 const CSV_FILES = {
   0: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng1.csv",
-  1: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng1.csv",
-  2: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng1.csv",
-  3: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng1.csv",
-  4: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng1.csv"
+  1: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng2.csv",
+  2: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/eng3.csv",
+  3: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/old1.csv",
+  4: "https://raw.githubusercontent.com/Ibunharuduun/vocabcards/main/old2.csv"
 };
 
 let cards = [];
