--- a/vocabcards.html
+++ b/vocabcards.html
@@ -93,18 +93,21 @@ body {
   background: white;
   border-radius: 16px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-
-  display: flex;
-  justify-content: center;
-  align-items: center;      /* ← 中央に戻す */
-
-  font-size: 28px;
   padding: 20px;
   box-sizing: border-box;
-
-  white-space: pre-line;
-  overflow-y: auto;         /
+  overflow-y: auto;   /* スクロール担当 */
 }
+
+.face-content {
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 28px;
+  white-space: pre-line;
+}
+
   
 .back {
   transform: rotateY(180deg);
@@ -151,8 +154,8 @@ button {
 
     <div id="card" class="card">
       <div class="card-inner">
-        <div class="face front" id="front"></div>
-        <div class="face back" id="back"></div>
+        <div class="face front"><div class="face-content" id="front"></div></div>
+        <div class="face back"><div class="face-content" id="back"></div></div>
       </div>
     </div>
 
