--- a/vocabcards.html
+++ b/vocabcards.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>単語カード</title>
+<title>vocabcards</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
@@ -56,6 +56,11 @@
 
   </div>
 </div>
+
+<div id="loading" style="display:none;">
+  <div class="spinner"></div>
+</div>
+
 
 <script src="app.js"></script>
 
